[tool.poetry]
name = "course-3"
version = "0.1.0"
description = ""
authors = ["Goldenkov <oldfild1@gmail.com>"]
readme = "README.md"
packages = [{include = "course_3"}]

[tool.poetry.dependencies]
python = "^3.10.6"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
